Editor tweaks (correct dropdown width, stopping animation when closed) - dropdowns adapt their width when having jump / unset buttons next to them - WebGL preview animation is stopped when closing the preview (fixed info staying visible when opening a non-WebGL / non existent preview)

--- a/tools/css/editor.css
+++ b/tools/css/editor.css
@@ -39,8 +39,16 @@ textarea {
 select {
     font-size: 0.8vw;
 
-    max-width: 10.6em;
+    max-width: 12.6em;
     height: 1.6em;
+}
+
+select.withJumpButton, select.withUnsetButton {
+    max-width: 10.6em;
+}
+
+select.withJumpButton.withUnsetButton {
+    max-width: 8.6em;
 }
 
 /* -------------------------------------------------------------------- */
